--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "@material-tailwind/react": "^2.1.1",
+    "@pushprotocol/restapi": "^1.4.45",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.1",
-    "ethers": "^6.9.0",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.20.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
